--- a/design.html
+++ b/design.html
@@ -355,9 +355,7 @@
                             <h2 id="pad">Why are we special?</h2>
                             <div class="divider"></div>
                         </div>
-                        <p id="pad1">Lorem ipsum dolor sit amet, elit.Lorem ipsum dolor
-                            sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p id="pad1">Food On Focus Media specializes in branding and marketing for the F&B industry. We create impactful and timeless brand identities built on a strong strategic foundation informed by thorough research. Our services are trusted by restaurateurs, real estate developers, entrepreneurs, and marketing professionals.</p>
                         <ul>
                             <li class="expandable">
                                 <div class="ex-list-item">
@@ -372,7 +370,26 @@
                                                 </path>
                                             </g>
                                         </svg>
-                                        <h3>Award Winning</h3>
+                                        <h3>What makes 3D design important for my restaurant or cafe?</h3>
+                                    </div>
+                                    <span class="ex-plus">+</span>
+                                </div>
+                                <p class="expanded" style="text-align:justify">3D design provides a realistic and immersive visualization of your space, allowing you to see how your restaurant or cafe will look and feel before it's built. It helps in planning the layout, ambiance, and overall aesthetic, ensuring your vision is accurately realized.</p>
+                            </li>
+                            <li class="expandable">
+                                <div class="ex-list-item">
+                                    <div class="ex-h3-icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" focusable="false"
+                                            color="var(--token-c8809533-d74e-4474-af14-ef3a211efd13, rgb(1, 70, 112))"
+                                            style="user-select: none;width: 4%;height: 6%;display: inline-block;fill: rgb(0, 0, 0);color: rgb(0, 0, 0);flex-shrink: 0;">
+                                            <g color="var(--token-c8809533-d74e-4474-af14-ef3a211efd13, rgb(1, 70, 112))"
+                                                weight="thin">
+                                                <path
+                                                    d="M220,216a4,4,0,0,1-4,4H40a4,4,0,0,1,0-8H216A4,4,0,0,1,220,216Zm-80-40V80a12,12,0,0,1,12-12h40a12,12,0,0,1,12,12v96a12,12,0,0,1-12,12H152A12,12,0,0,1,140,176Zm8,0a4,4,0,0,0,4,4h40a4,4,0,0,0,4-4V80a4,4,0,0,0-4-4H152a4,4,0,0,0-4,4Zm-96,0V40A12,12,0,0,1,64,28h40a12,12,0,0,1,12,12V176a12,12,0,0,1-12,12H64A12,12,0,0,1,52,176Zm8,0a4,4,0,0,0,4,4h40a4,4,0,0,0,4-4V40a4,4,0,0,0-4-4H64a4,4,0,0,0-4,4Z">
+                                                </path>
+                                            </g>
+                                        </svg>
+                                        <h3> How does branding benefit my food business?</h3>
                                     </div>
                                     <span class="ex-plus">+</span>
                                 </div>
@@ -393,13 +410,11 @@
                                                 </path>
                                             </g>
                                         </svg>
-                                        <h3>Award Winning</h3>
+                                        <h3>What is included in your branding services?</h3>
                                     </div>
                                     <span class="ex-plus">+</span>
                                 </div>
-                                <p class="expanded" style="text-align:justify">Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elitLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <p class="expanded" style="text-align:justify">Our branding services encompass the development of a comprehensive brand identity, ensuring that your brand's visual and verbal elements are cohesive and strategically aligned with your business goals and target audience. This includes creating a distinctive brand voice and image that resonate deeply with your customers..</p>
                             </li>
                             <li class="expandable">
                                 <div class="ex-list-item">
@@ -414,13 +429,11 @@
                                                 </path>
                                             </g>
                                         </svg>
-                                        <h3>Award Winning</h3>
+                                        <h3>How do you ensure that the 3D design and branding align with my business goals?</h3>
                                     </div>
                                     <span class="ex-plus">+</span>
                                 </div>
-                                <p class="expanded" style="text-align:justify">Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elitLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <p class="expanded" style="text-align:justify">We start with a thorough consultation to understand your vision, goals, and target audience. Our team conducts research and develops a strategic plan to ensure that the 3D design and branding not only meet but exceed your expectations, creating a seamless and impactful brand experience.</p>
                             </li>
                             <li class="expandable">
                                 <div class="ex-list-item">
@@ -435,13 +448,11 @@
                                                 </path>
                                             </g>
                                         </svg>
-                                        <h3>Award Winning</h3>
+                                        <h3>What sets Food On Focus Media apart in the F&B industry?</h3>
                                     </div>
                                     <span class="ex-plus">+</span>
                                 </div>
-                                <p class="expanded" style="text-align:justify">Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elitLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <p class="expanded" style="text-align:justify">Our deep understanding of the F&B industry, combined with our commitment to creativity and strategic research, allows us to create timeless and impactful brand identities. We tailor our services to meet the unique needs of each client, ensuring that every project we undertake helps our clients stand out in a competitive market.</p>
                             </li>
                         </ul>
                     </div>
@@ -471,6 +482,7 @@
             <!-- section end -->
 
             <!-- timeline-start -->
+
             <section class="section-vr-timeline">
                 <h1 class="timeline-heading">OUR PROCESS</h1>
                 <div class="section-timeline">
@@ -479,75 +491,95 @@
                             <div class="timeline_progress">
                                 <div class="timeline_progress-bar"></div>
                             </div>
+
+                            <div class="mil-animation-frame">
+                                <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                                    data-value-2="1.4" style="top: 300px; right: -100px"></div>
+                                <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                                    data-value-2="1" style="left: -100px;top: 100px;"></div>
+                            </div>
+
                             <div class="timeline_item" data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3d4">
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d4-0686a3cd" class="timeline_left">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d4-0686a3cd"
+                                    class="timeline_left">
                                     <div class="timeline_date-text">Brief</div>
                                 </div>
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d7-0686a3cd" class="timeline_centre">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d7-0686a3cd"
+                                    class="timeline_centre">
                                     <div class="timeline_circle"></div>
                                 </div>
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d9-0686a3cd" class="timeline_right">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d9-0686a3cd"
+                                    class="timeline_right">
                                     <div class="margin-bottom-xlarge">
-                                        <div class="timeline_text">Share your dreams and ambitions with xfiner,
-                                            simply contact us.</div>
+                                        <div class="timeline_text">Contact us for personalized guidance and share your culinary vision with our expert team.</div>
                                     </div>
                                 </div>
                             </div>
+                            
+
+
                             <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3e0" class="timeline_item">
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3e1-0686a3cd" class="timeline_left">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3e1-0686a3cd"
+                                    class="timeline_left">
                                     <div class="timeline_date-text">Discover</div>
                                 </div>
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3e4-0686a3cd" class="timeline_centre">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3e4-0686a3cd"
+                                    class="timeline_centre">
                                     <div class="timeline_circle"></div>
                                 </div>
                                 <div class="timeline_right">
                                     <div class="margin-bottom-medium">
-                                        <div class="timeline_text">Let's have a discussion, and we will show you
-                                            the even finer ways.<br>
+                                        <div class="timeline_text">We then get you on a discovery call to have a discussion about your aspirations. We'll provide a focused approach to brand-building, ensuring your culinary vision comes to life.<br>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3eb" class="timeline_item">
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3ec-0686a3cd" class="timeline_left">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3ec-0686a3cd"
+                                    class="timeline_left">
                                     <div class="timeline_date-text">Scope</div>
                                 </div>
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3ef-0686a3cd" class="timeline_centre">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3ef-0686a3cd"
+                                    class="timeline_centre">
                                     <div class="timeline_circle"></div>
                                 </div>
                                 <div class="timeline_right">
                                     <div class="margin-bottom-medium">
-                                        <div class="timeline_text">If you like, we will tell you how much time
-                                            and budget it may take.<br>
+                                        <div class="timeline_text">Find out the time and budget details customized to your project. We'll work closely with you to ensure every aspect is carefully considered..<br>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
+
                             <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3f6" class="timeline_item">
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3f7-0686a3cd" class="timeline_left">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3f7-0686a3cd"
+                                    class="timeline_left">
                                     <div class="timeline_date-text">Assemble</div>
                                 </div>
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3fa-0686a3cd" class="timeline_centre">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3fa-0686a3cd"
+                                    class="timeline_centre">
                                     <div class="timeline_circle"></div>
                                 </div>
                                 <div class="timeline_right">
                                     <div class="margin-bottom-medium">
-                                        <div class="timeline_text">If you like, we will assemble the xteam on
-                                            our private platform.<br></div>
+                                        <div class="timeline_text">Our team puts together a proposal, moodboard, references and ensures it aligns perfectly with your vision.<br></div>
                                     </div>
                                 </div>
                             </div>
+
                             <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a401" class="timeline_item">
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a402-0686a3cd" class="timeline_left">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a402-0686a3cd"
+                                    class="timeline_left">
                                     <div class="timeline_date-text">Start</div>
                                 </div>
-                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a405-0686a3cd" class="timeline_centre">
+                                <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a405-0686a3cd"
+                                    class="timeline_centre">
                                     <div class="timeline_circle"></div>
                                 </div>
                                 <div class="timeline_right">
                                     <div class="margin-bottom-medium end">
-                                        <div class="timeline_text">And then we start, to finish, with
-                                            excellence, precision and passion.<br>
+                                        <div class="timeline_text">Once payments and budgets are through, we'll guide you through every step, from concept to completion, ensuring your brand flourishes..<br>
                                         </div>
                                     </div>
                                 </div>
@@ -968,19 +1000,23 @@
             <div class="teaser-section">
                 <div class="left-side">
                     <img src="img/photo/contact-bg.webp" alt="Teaser Image" class="teaser-image">
-                    <div class="center-btn">
+                    <!-- <div class="center-btn">
                     <a href="contact.html" class="schedule-button">Let's Schedule<i style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i></a>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="right-side">
                     <!-- <h2>Ready to Get Started?</h2> -->
-                    <p style="color: #fbae19; font-weight: 400; font-size: 1.4rem;">We’re excited to connect with you. One click is all it takes to schedule a meeting with us and discuss your needs.</p>
+                    <p style="color: #fbae19; font-weight: 400; font-size: 1.4rem;">Our team of experts will be happy to assist you in a free 30 mins discovery call. We're excited to connect with you and meeting you soon. </p>
                         <h1 class="primary-heading" style="color: #972221;    font-weight: 100;
                         word-spacing: 0px;">
-                            Start your next
+                            Start Cooking Your Next 
                             <br>
                             project<span class="txt-thin mil-maroon" style="margin: 0 10px;">WITH US</span>
                         </h1>
+
+                        <div class="center-btn">
+                            <a href="contact.html" class="schedule-button">Let's Schedule<i style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i></a>
+                            </div>
                 </div>
             </div>
         </section>
@@ -1005,11 +1041,14 @@
                 <li><a href=""><i class="fab fa-linkedin"></i></a></li>
             </ul>
             <p class="footer_adr">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Vel asperiores illum natus velit dolore perspiciatis, eum obcaecati,
-                expedita molestiae voluptatibus corporis et eos cum quam nemo excepturi. 
+                Office #802, SIT Tower, Dubai Silicon Oasis, Dubai, United Arab Emirates
+                <br><span class="txt-thin mil-maroon" ><i class="fa-solid fa-phone"></i> 971 4 587 4633 <br><i class="fa-solid fa-envelope-circle-check"></i> info@foodonfocus.com</br></span> </br>
+                
             </p>
+
+
         </div>
+        <p>All Rights Reserved | Copyright© foodonfocus.com 2024</p>
     </footer>
 
             <!-- hidden elements -->
