--- a/consult.html
+++ b/consult.html
@@ -301,6 +301,7 @@
                 <!-- cousult buttons -->
 
                 <!-- timeline-start -->
+
                 <section class="section-vr-timeline">
                     <h1 class="timeline-heading">OUR PROCESS</h1>
                     <div class="section-timeline">
@@ -309,6 +310,14 @@
                                 <div class="timeline_progress">
                                     <div class="timeline_progress-bar"></div>
                                 </div>
+
+                                <div class="mil-animation-frame">
+                                    <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                                        data-value-2="1.4" style="top: 300px; right: -100px"></div>
+                                    <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                                        data-value-2="1" style="left: -100px;top: 100px;"></div>
+                                </div>
+
                                 <div class="timeline_item" data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3d4">
                                     <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d4-0686a3cd"
                                         class="timeline_left">
@@ -321,11 +330,13 @@
                                     <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d9-0686a3cd"
                                         class="timeline_right">
                                         <div class="margin-bottom-xlarge">
-                                            <div class="timeline_text">Share your dreams and ambitions with xfiner,
-                                                simply contact us.</div>
+                                            <div class="timeline_text">Contact us for personalized guidance and share your culinary vision with our expert team.</div>
                                         </div>
                                     </div>
                                 </div>
+                                
+
+
                                 <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3e0" class="timeline_item">
                                     <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3e1-0686a3cd"
                                         class="timeline_left">
@@ -337,8 +348,7 @@
                                     </div>
                                     <div class="timeline_right">
                                         <div class="margin-bottom-medium">
-                                            <div class="timeline_text">Let's have a discussion, and we will show you
-                                                the even finer ways.<br>
+                                            <div class="timeline_text">We then get you on a discovery call to have a discussion about your aspirations. We'll provide a focused approach to brand-building, ensuring your culinary vision comes to life.<br>
                                             </div>
                                         </div>
                                     </div>
@@ -354,12 +364,13 @@
                                     </div>
                                     <div class="timeline_right">
                                         <div class="margin-bottom-medium">
-                                            <div class="timeline_text">If you like, we will tell you how much time
-                                                and budget it may take.<br>
+                                            <div class="timeline_text">Find out the time and budget details customized to your project. We'll work closely with you to ensure every aspect is carefully considered..<br>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+
+
                                 <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3f6" class="timeline_item">
                                     <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3f7-0686a3cd"
                                         class="timeline_left">
@@ -371,11 +382,11 @@
                                     </div>
                                     <div class="timeline_right">
                                         <div class="margin-bottom-medium">
-                                            <div class="timeline_text">If you like, we will assemble the xteam on
-                                                our private platform.<br></div>
+                                            <div class="timeline_text">Our team puts together a proposal, moodboard, references and ensures it aligns perfectly with your vision.<br></div>
                                         </div>
                                     </div>
                                 </div>
+
                                 <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a401" class="timeline_item">
                                     <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a402-0686a3cd"
                                         class="timeline_left">
@@ -387,8 +398,7 @@
                                     </div>
                                     <div class="timeline_right">
                                         <div class="margin-bottom-medium end">
-                                            <div class="timeline_text">And then we start, to finish, with
-                                                excellence, precision and passion.<br>
+                                            <div class="timeline_text">Once payments and budgets are through, we'll guide you through every step, from concept to completion, ensuring your brand flourishes..<br>
                                             </div>
                                         </div>
                                     </div>
@@ -399,7 +409,6 @@
                         </div>
                     </div>
                 </section>
-
                 <script>
                     window.addEventListener('scroll', function () {
                         var timelineProgress = document.querySelector('.timeline_progress-bar');
@@ -466,24 +475,27 @@
             <div class="teaser-section">
                 <div class="left-side">
                     <img src="img/photo/contact-bg.webp" alt="Teaser Image" class="teaser-image">
-                    <div class="center-btn">
+                    <!-- <div class="center-btn">
                     <a href="contact.html" class="schedule-button">Let's Schedule<i style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i></a>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="right-side">
                     <!-- <h2>Ready to Get Started?</h2> -->
-                    <p style="color: #fbae19; font-weight: 400; font-size: 1.4rem;">We’re excited to connect with you. One click is all it takes to schedule a meeting with us and discuss your needs.</p>
+                    <p style="color: #fbae19; font-weight: 400; font-size: 1.4rem;">Our team of experts will be happy to assist you in a free 30 mins discovery call. We're excited to connect with you and meeting you soon. </p>
                         <h1 class="primary-heading" style="color: #972221;    font-weight: 100;
                         word-spacing: 0px;">
-                            Start your next
+                            Start Cooking Your Next 
                             <br>
                             project<span class="txt-thin mil-maroon" style="margin: 0 10px;">WITH US</span>
                         </h1>
+
+                        <div class="center-btn">
+                            <a href="contact.html" class="schedule-button">Let's Schedule<i style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i></a>
+                            </div>
                 </div>
             </div>
         </section>
     </div>
-
 
 
 
@@ -504,11 +516,14 @@
                 <li><a href=""><i class="fab fa-linkedin"></i></a></li>
             </ul>
             <p class="footer_adr">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Vel asperiores illum natus velit dolore perspiciatis, eum obcaecati,
-                expedita molestiae voluptatibus corporis et eos cum quam nemo excepturi. 
+                Office #802, SIT Tower, Dubai Silicon Oasis, Dubai, United Arab Emirates
+                <br><span class="txt-thin mil-maroon" ><i class="fa-solid fa-phone"></i> 971 4 587 4633 <br><i class="fa-solid fa-envelope-circle-check"></i> info@foodonfocus.com</br></span> </br>
+                
             </p>
+
+
         </div>
+        <p>All Rights Reserved | Copyright© foodonfocus.com 2024</p>
     </footer>
 
             <!-- hidden elements -->
