--- a/home-1.html
+++ b/home-1.html
@@ -321,7 +321,7 @@
                                                         <h5>Interior design studio</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
-                                                        <a href="project-1.html" class="mil-button mil-arrow-place">
+                                                        <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -348,7 +348,7 @@
                                                         <h5>Home Security Camera</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project-2.html" class="mil-button mil-arrow-place">
+                                                        <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -375,7 +375,7 @@
                                                         <h5>Kemia Honest Skincare</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project-3.html" class="mil-button mil-arrow-place">
+                                                        <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -402,7 +402,7 @@
                                                         <h5>Cascade of Lava</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project-4.html" class="mil-button mil-arrow-place">
+                                                        <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -429,7 +429,7 @@
                                                         <h5>Air Pro by Molekule</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project-5.html" class="mil-button mil-arrow-place">
+                                                        <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -456,7 +456,7 @@
                                                         <h5>Tony's Chocolonely</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project-6.html" class="mil-button mil-arrow-place">
+                                                        <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -569,7 +569,7 @@
                                     <h2 class="mil-h1 mil-maroon mil-center" style="font-size: 3rem;">Media <span
                                             class="mil-thin">Can Help You?</span></h2>
 
-                                    <a href="services.html"
+                                    <a href="#"
                                         class="mil-services-button mil-button mil-arrow-place"><span>What we
                                             do</span></a>
 
@@ -579,7 +579,7 @@
                             <div class="row custrow mil-services-grid m-0">
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0" id="service-1">
 
-                                    <a href="service.html" class="mil-service-card-sm mil-up">
+                                    <a href="#" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-maroon mil-mb-30 inter-mil-h5 hover-text-1">Content Production
                                         </h5>
                                         <p class="mil-light-dark mil-mb-30">Crafting irresistible organic content
@@ -593,7 +593,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0" id="service-2">
 
-                                    <a href="service.html" class="mil-service-card-sm mil-up">
+                                    <a href="#" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-maroon mil-mb-30 inter-mil-h5 hover-text-2">3D Design & Branding
                                         </h5>
                                         <p class="mil-light-dark mil-mb-30">Our 3D design services offer immersive,
@@ -607,7 +607,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0" id="service-3">
 
-                                    <a href="service.html" class="mil-service-card-sm mil-up">
+                                    <a href="#" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-maroon mil-mb-30 inter-mil-h5 hover-text-3"> Design Consulting
                                         </h5>
                                         <p class="mil-light-dark mil-mb-30">Providing personalized, one-on-one guidance
@@ -619,7 +619,7 @@
                                 </div>
                                 <!-- <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
-                                    <a href="service.html" class="mil-service-card-sm mil-up">
+                                    <a href="#" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-maroon mil-mb-30">Creative Consulting <br>and Development</h5>
                                         <p class="mil-light-dark mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
@@ -670,7 +670,7 @@
                                         impactful
                                         work that exceeds expectations.</p>
 
-                                    <div class="mil-up"><a href="team.html"
+                                    <div class="mil-up"><a href="#"
                                             class="mil-button mil-arrow-place mil-mb-60"><span>Read more</span></a>
                                     </div>
 
@@ -1267,21 +1267,22 @@
                                     </div>
                                     <div class="right-side">
                                         <!-- <h2>Ready to Get Started?</h2> -->
-                                        <p style="color: #fbae19; font-weight: 400; font-size: 1.4rem;">Our team of
-                                            experts will be happy to assist you in a free 30 mins discovery call. We're
-                                            excited to connect with you and meeting you soon. </p>
                                         <h1 class="primary-heading" style="color: #972221;    font-weight: 100;
-                                    word-spacing: 0px;">
+                                        word-spacing: 0px;">
                                             Start Cooking Your Next
                                             <br>
                                             project<span class="txt-thin mil-maroon" style="margin: 0 10px;">WITH
                                                 US</span>
                                         </h1>
+                                        <p style="color: #fbae19; font-weight: 400; font-size: 1.4rem;">Our team of
+                                            experts will be happy to assist you in a free 30 mins discovery call. We're
+                                            excited to connect with you and meeting you soon. </p>
+
 
                                         <div class="center-btn">
                                             <a href="contact.html" class="schedule-button">Let's Schedule<i
-                                                    style="padding-left: 5px;"
-                                                    class="fa-solid fa-calendar-check"></i></a>
+                                                    style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
