--- a/content.html
+++ b/content.html
@@ -101,13 +101,13 @@
         <!-- menu -->
         <div class="mil-menu-frame">
             <!-- frame clone -->
-            <div class="mil-frame-top">
+            <!-- <div class="mil-frame-top">
                 <a href="home-1.html" class="mil-logo"><img class="custlogo" src="img/base/FNF LOGO NEW.png"
                         alt="fnflogo"></a>
                 <div class="mil-menu-btn" style="background: balck;">
                     <span></span>
                 </div>
-            </div>
+            </div> -->
             <!-- frame clone end -->
             <div class="container">
                 <div class="mil-menu-content">
@@ -876,6 +876,7 @@
     <!-- scroll to js -->
     <script src="js/plugins/ScrollTo.min.js"></script>
     <!-- ashley js -->
+    <script src="js/custom.js"></script>
     <script src="js/main.js"></script>
 
 </body>
