--- a/design.html
+++ b/design.html
@@ -1006,17 +1006,19 @@
                 </div>
                 <div class="right-side">
                     <!-- <h2>Ready to Get Started?</h2> -->
-                    <p style="color: #fbae19; font-weight: 400; font-size: 1.4rem;">Our team of experts will be happy to assist you in a free 30 mins discovery call. We're excited to connect with you and meeting you soon. </p>
-                        <h1 class="primary-heading" style="color: #972221;    font-weight: 100;
-                        word-spacing: 0px;">
-                            Start Cooking Your Next 
-                            <br>
-                            project<span class="txt-thin mil-maroon" style="margin: 0 10px;">WITH US</span>
-                        </h1>
+                    <h1 class="primary-heading" style="color: #972221; text-align: center;    font-weight: 100;
+                    word-spacing: 0px;">
+                        Start Cooking Your Next project
+                        <br>
+                        <span class="txt-thin mil-maroon" style="margin: 0 10px;">WITH
+                            US</span>
+                    </h1>
 
-                        <div class="center-btn">
-                            <a href="contact.html" class="schedule-button">Let's Schedule<i style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i></a>
-                            </div>
+                    <div class="center-btn">
+                        <a href="contact.html" class="schedule-button">Let's Schedule<i
+                                style="padding-left: 5px;"
+                                class="fa-solid fa-calendar-check"></i></a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -1026,29 +1028,27 @@
 
     <footer class="footer8">
         <div class="container8">
-            <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" alt=""></div>
-            <!-- <a href="#." class="brand8">Brand</a> -->
-            <ul class="menu8">
-                <li ><a href="">Home</a></li>
-                <li><a href="">Design</a></li>
-                <li><a href="">Content</a></li>
-                <li><a href="">Consult</a></li>
-            </ul>
+            <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" alt="">
+            </div>
             <ul class="media-icons8">
                 <li><a href=""><i class="fab fa-facebook"></i></a></li>
                 <li><a href=""><i class="fab fa-twitter"></i></a></li>
                 <li><a href=""><i class="fab fa-instagram"></i></a></li>
                 <li><a href=""><i class="fab fa-linkedin"></i></a></li>
             </ul>
-            <p class="footer_adr">
+            <div class="footer_adr">
                 Office #802, SIT Tower, Dubai Silicon Oasis, Dubai, United Arab Emirates
-                <br><span class="txt-thin mil-maroon" ><i class="fa-solid fa-phone"></i> 971 4 587 4633 <br><i class="fa-solid fa-envelope-circle-check"></i> info@foodonfocus.com</br></span> </br>
-                
-            </p>
+                <br>
+                <div class="txt-thin mil-maroon"><i class="fa-solid fa-phone"></i> 971 4 587 4633
+                    <br>
+                    <i class="fa-solid fa-envelope-circle-check"></i>
+                    info@foodonfocus.com
+                </div>
+            </div>
 
 
         </div>
-        <p>All Rights Reserved | Copyright© foodonfocus.com 2024</p>
+        <p id="copywright-p">All Rights Reserved | Copyright© foodonfocus.com 2024</p>
     </footer>
 
             <!-- hidden elements -->
