--- a/home-1.html
+++ b/home-1.html
@@ -1267,22 +1267,18 @@
                                     </div>
                                     <div class="right-side">
                                         <!-- <h2>Ready to Get Started?</h2> -->
-                                        <h1 class="primary-heading" style="color: #972221;    font-weight: 100;
+                                        <h1 class="primary-heading" style="color: #972221; text-align: center;    font-weight: 100;
                                         word-spacing: 0px;">
-                                            Start Cooking Your Next
+                                            Start Cooking Your Next project
                                             <br>
-                                            project<span class="txt-thin mil-maroon" style="margin: 0 10px;">WITH
+                                            <span class="txt-thin mil-maroon" style="margin: 0 10px;">WITH
                                                 US</span>
                                         </h1>
-                                        <p style="color: #fbae19; font-weight: 400; font-size: 1.4rem;">Our team of
-                                            experts will be happy to assist you in a free 30 mins discovery call. We're
-                                            excited to connect with you and meeting you soon. </p>
-
 
                                         <div class="center-btn">
                                             <a href="contact.html" class="schedule-button">Let's Schedule<i
-                                                    style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i>
-                                            </a>
+                                                    style="padding-left: 5px;"
+                                                    class="fa-solid fa-calendar-check"></i></a>
                                         </div>
                                     </div>
                                 </div>
