--- a/content.html
+++ b/content.html
@@ -513,6 +513,99 @@
                 </section>
                 <!-- service end -->
 
+                <!-- prices -->
+                <section class="bg-white">
+                    <div class="mi-invert-fix">
+                        <div class="container mil-p-120-120">
+                            <div class="mil-center">
+                                <h2 class=" mil-up mil-mb-30 mil-center">Reasonable <span class="mil-thin">prices</span> <br>for innovative <span class="mil-thin">solutions</span></h2>
+                                <p class=" mil-up mil-mb-120">At our agency, we have a unique approach to web design and development. <br>We believe in creating in terms of user experience, functionality.</p>
+                            </div>
+
+                            <a href="contact.html" class="mil-price-card mil-price-card-wbg mil-choose mil-accent-cursor mil-up">
+                                <div class="row align-items-center">
+                                    <div class="col-lg-2">
+                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span class="mil-accent">19</span></div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <h5 class=" mil-mb-30">Tailored Designs for<br> Every Budget</h5>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a, voluptatibus, suscipit beatae officiis omnis.</p>
+                                    </div>
+                                    <div class="col-lg-2">
+                                        <div class="mil-adaptive-right mil-mb-30">
+                                            <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="contact.html" class="mil-price-card mil-choose mil-accent-cursor mil-up">
+                                <div class="row align-items-center">
+                                    <div class="col-lg-2">
+                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span class="mil-accent">29</span></div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <h5 class=" mil-mb-30">Inspiring and Customized <br> Design Solutions</h5>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a, voluptatibus, suscipit beatae officiis omnis.</p>
+                                    </div>
+                                    <div class="col-lg-2">
+                                        <div class="mil-adaptive-right mil-mb-30">
+                                            <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="contact.html" class="mil-price-card mil-price-card-wbg mil-choose mil-accent-cursor mil-up">
+                                <div class="row align-items-center">
+                                    <div class="col-lg-2">
+                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span class="mil-accent">49</span></div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <h5 class=" mil-mb-30">Unleashing the Beauty of Space <br> with Unique Designs</h5>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a, voluptatibus, suscipit beatae officiis omnis.</p>
+                                    </div>
+                                    <div class="col-lg-2">
+                                        <div class="mil-adaptive-right mil-mb-30">
+                                            <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="contact.html" class="mil-price-card mil-choose mil-accent-cursor mil-up mil-mb-60">
+                                <div class="row align-items-center">
+                                    <div class="col-lg-2">
+                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span class="mil-accent">199</span></div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <h5 class=" mil-mb-30">Exquisite Design Concepts <br> for Discerning Clients</h5>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a, voluptatibus, suscipit beatae officiis omnis.</p>
+                                    </div>
+                                    <div class="col-lg-2">
+                                        <div class="mil-adaptive-right mil-mb-30">
+                                            <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+
+                            <div class="mil-center">
+                                <a href="contact.html" class="mil-button  mil-arrow-place">
+                                    <span>individual solution</span>
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+                </section>
+                <!-- prices end -->
+
                 <!-- timeline-start -->
 
                 <section class="section-vr-timeline">
