animations added in home page

--- a/home-1.html
+++ b/home-1.html
@@ -1073,6 +1073,14 @@
                                         data-value-2="1.4" style="top: 300px; right: -100px"></div>
                                     <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
                                         data-value-2="1" style="left: -100px;top: 100px;"></div>
+                                    <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                                        data-value-2="1.4" style="top: 1500px; right: -100px"></div>
+                                    <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                                        data-value-2="1" style="left: -100px;top: 1300px;"></div>
+                                    <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                                        data-value-2="1.4" style="top: 2400px; right: -100px"></div>
+                                    <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                                        data-value-2="1" style="left: -100px;top: 2200px;"></div>
                                 </div>
 
                                 <div class="timeline_item" data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3d4">
@@ -1131,8 +1139,7 @@
                                         </div>
                                     </div>
                                 </div>
-
-
+                        
                                 <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3f6" class="timeline_item">
                                     <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3f7-0686a3cd"
                                         class="timeline_left">
